# HTW

./: .directory  .gitignore  Makefile  README.md  README.txt  beleg  beleg.c  beleg.cgi  beleg.pro  cd.cpp  changemedium.cpp  changemedium.ui  changeperson.cpp  changeperson.ui  compile  datamanager.cpp  dvd.cpp  dvd.h  givemedium.cpp  mainwindow.cpp  moc_addnewmedium.cpp  moc_addnewperson.cpp  moc_changemedium.cpp  moc_changeperson.cpp  moc_givemedium.cpp  moc_mainwindow.cpp  person.h  resource.qrc  s76905  ui_addnewmedium.h  ui_addnewperson.h  ui_changemedium.h  ui_changeperson.h  ui_givemedium.h  ui_mainwindow.h  unitDBBackUp.csv
Betriebssystemen/: README.md
Betriebssystemen/bs1-3/: count-anim  datei1MB  hello  hello.c  sort.txt
Betriebssystemen/bs10/: a.out  handler.c  hardhandlerSINGLEBackUp.c  st.out  starter.c  w2.out  warrior.c
Betriebssystemen/bs11/: a.out  threadhello.c
Betriebssystemen/bs3/: sizeDir  varSpiel
Betriebssystemen/bs4/: bemerkung.txt
Betriebssystemen/bs5/: 1.sh  2.sh  3.sh  forin.sh
Betriebssystemen/bs6/: .1.sh.swp  .3.sh.swo  1.sh  2.sh  3.sh  4.sh  arrayTest.sh
Betriebssystemen/bs7/: 5.sh  7.c  a.out  netzwerkoperationen.txt
Compiler_Interpreter/pl0Compiler/: CMakeLists.txt  a.out  codegen.c  codegen.h  fakultRecursiv.pl0  lex.c  lex.h  main.c  namelist.c  namelist.h  parser.c  parser.h  t3.pl0  tArraysAndCommentTest.pl0  tarraytest.pl0  tminProcCall.pl0  tminStatementInput.pl0  tminWithPlus.pl0  twhile.pl0
Compiler_Interpreter/pl0Compiler/compiled/: .compiled.cl0.swp  compiled.cl0  r
DataBases1/: LV.sql
DataBases2/: LV2.txt  oracle.txt
Internet-Technologien1/: index.html  manifest.json  read.me  service-worker.js
Internet-Technologien2/: Blockcodes.txt  Kanalmodelle und Verfahren.txt  Online-Codes.txt  Praktikum RTP-Protokoll.rtf  Praktikum RTSP-Protokoll.txt  RFC für FEC.txt
KI/: 15puzzle.pl  8_puzzle.pl  LogisticRegression_Boston.py  LogisticRegression_Number.py  River_crossing_puzzle.pl  deep_and_breadth_search.pl  diff.pl  family.pl  labirinth.pl  readme.md  river_crossing_puzzle.py  sentence_construct.pl  strafbar.pl  taylor-reihe.pl  translator-de-fr.pl
Programmierung1/: README.md  Spickzettel.odt  beleg.cgi  func.h  unitDB.csv
Programmierung2/: Spickzettel.odt  addnewmedium.h  addnewperson.cpp  addnewpersondialog.ui  beleg.pro.user.1e23593  changemedium.h  givemedium.ui  medium.h
Rechnernetze-Kommunikationssysteme/: read.me  wireshark
modules/: funcListDB.c  funcListMan.c  funcPrintCGI.c
src/: TCPClientAlice.java  TCPClientAliceAlternative.java  TCPClientPrakt.java  TCPServer.java  TCPServerAlice.java  UDPClient.java
verteilte Systeme/: ClockManager.java  ThreadBool.java
(+430 files in other folders)
